2005-05-04    <jeff@mini.nerble.net>

	* usecode/bgintrinsics.h: Added several SI usecode intrinsics for
	use in BG mods.

2005-05-03    <jeff@mini.nerble.net>

	* usecode/intrinsics.cc: Added 'close_gump()' intrinsic.

2005-05-02    <jeff@mini.nerble.net>

	* usecode/ucfunids.h,etc: Added Usecode support for shape #'s >=
	0x400.  In the usecode compiler use "shape#(n)" for the function #.

2005-04-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* drag.cc: check if gump's owner exists before using it

2005-04-28  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/msgfile.cc, shapes/items.cc: strip CR's from end of line

2005-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucinternal.*: reset all statics when loading

2005-04-20    <jeff@mini.nerble.net>

	* usecode/ucinternal.cc: Increase max. # of global flags to 2048.
	* usecode/compiler/ucmain.cc: Look up include dir from UCC_INCLUDE
	env. var.

2005-03-27    <jeff@mini.nerble.net>

	* cheat.cc (Cheat): Ctrl-arrow keys will move entire chunks when
	in "Select chunks" mode.

2005-03-12    <jeff@mini.nerble.net>

	* data/exultmsg.txt: Applied "international support" patch from
	dk@pollodigomma.net.

2005-02-18    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc: Add text automatically from
	"autonotes.txt" when a global flag is set.

2005-02-14	Darke <darkepaw@users.sf.net>
	* hash_utils.h: Hugely complex gcc4.0pre fixes.

2005-01-23    <jeff@mini.nerble.net>

	* game.cc (Game): Command-line option --write-xml causes game
	config. to be written to 'patch/exultgame.xml'.
	(Game): If 'patch/exultgame.xml' exists, Exult uses that instead
	of manually adding resources.

2005-01-16    <jeff@mini.nerble.net>

	* shapes/font.cc: Don't skip linefeeds when handling spaces.
	(Needed for notebook, and I hope this doesn't mess up conversations.)

	* gumps/Notebook_gump.cc (Notebook_gump): Working on auto-paging.
