@@ -1646,6 +1646,55 @@ USECODE_INTRINSIC(is_pc_inside)
 	return(u);
 }
 
+USECODE_INTRINSIC(set_orrery)
+{	// set_orrery(pos, state(0-9)).
+	/*
+	 *	This code is based on the Planets.txt document written
+	 *	by Marzo Sette Torres Junior.
+	 *
+	 *	The table below contains the (x,y) offsets for each of the
+	 *	8 planet frames in each possible state.
+	 */
+	static short offsets[10][8][2] = {
+	/* S0 */  2,-3,  3,-3,  1,-6,  6,-2,  7,-1,  8, 1, -4, 8,  9,-2,
+	/* S1 */  3,-1,  4,-1, -5,-3,  3, 6,  7, 2,  4, 7, -8, 4,  8, 5,
+	/* S2 */  3, 1,  3, 2, -3, 4, -5, 4,  2, 7, -2, 8, -9, 1,  2, 9,
+	/* S3 */  1, 3,  1, 4,  4, 3, -5,-3, -4, 6, -7, 4, -9,-1, -4, 9,
+	/* S4 */ -2, 3, -2, 4,  5,-2,  5,-4, -7, 2, -8, 1, -8,-4, -8, 6,
+	/* S5 */ -4, 1, -5, 1, -5,-3,  6, 3, -7,-2, -7,-4, -7,-6, -10,1,
+	/* S6 */ -4, 9, -5,-1, -3, 4, -3, 6, -6,-4, -5,-6, -7,-6, -10,-2,
+	/* S7 */ -4, 8, -4,-3,  4, 3, -6, 1, -5,-5, -3,-7, -4,-8, -8,-6,
+	/* S8 */ -3, 7, -3,-4, -3,-5,  6,-2, -1,-7,  0,-8, -1,-9, -5,-9,
+	/* S9 */  0, 6,  0,-5,  1,-6,  1,-6,  1,-7,  1,-8,  1,-9, -1,-10};
+
+	Tile_coord pos( parms[0].get_elem(0).get_int_value(),
+			parms[0].get_elem(1).get_int_value(),
+			parms[0].get_elem(2).get_int_value());
+	int state = parms[1].get_int_value();
+					// Find Planet Britania.
+	Game_object *brit = Game_object::find_closest(pos, 765, 24);
+	if (brit && state >= 0 && state <= 9)
+		{
+		Game_object_vector planets;	// Remove existing planets.
+		brit->find_nearby(planets, 988, 24, 0);
+		for (Game_object_vector::iterator it = planets.begin(); 
+						it != planets.end(); it++)
+			{
+			Game_object *p = *it;
+			if (p->get_framenum() <= 7)	// Leave the sun.
+				p->remove_this();
+			}
+		for (int frame = 0; frame <= 7; ++frame)
+			{
+			Game_object *p = gmap->create_ireg_object(988, frame);
+			p->move(pos.tx + offsets[state][frame][0],
+				pos.ty + offsets[state][frame][1], pos.tz);
+			}
+		}
+	gwin->set_all_dirty();
+	return(no_ret);
+}
+
 USECODE_INTRINSIC(get_timer)
 {
 	int tnum = parms[0].get_int_value();
